Correction in alignment of destinations

--- a/css/destination.css
+++ b/css/destination.css
@@ -275,6 +275,7 @@ body {
     backdrop-filter: blur(15px);
     flex-direction: column;
     position: absolute;
+    z-index: 1;
     /* margin-bottom: 100px; */
     /* height: 65rem; */
     visibility: collapse;
@@ -285,7 +286,7 @@ body {
     align-items: flex-start;
     padding-left: 20px;
     gap: 3rem;
-    /* height: 100rem; */
+    /* height: 100vph; */
     /* visibility: collapse; */
   }
 
@@ -293,21 +294,35 @@ body {
     /* align-items: flex-end; */
     visibility: collapse;
     position: absolute;
-    right: 20px;
+    z-index: 2;
+    left:360px;
+    right: 10px;
     top: 100px;
   }
 
   .hamburger {
     visibility: visible;
     position: absolute;
-    right:30px;
+    left: 380px;
+    right:0px;
     top:70px;
     cursor: pointer;
     z-index: 1;
   }
-
+  .planetary-obj-img{
+    transform: scale(0.9,0.9);
+    /* text-align: center; */
+    /* margin: auto; */
+  }
+  .mainbody{
+    height: 120rem;
+  }
+  .mainbody-left{
+    margin: auto;
+  }
   .mainbody-right{
-    height: 40rem;
+    height: 60rem;
+    padding-left: 30px;
   }
   .mainbody-right-destination-info {
     height: 50%;
